used markdown instead of html

--- a/_posts/2009-09-03-owp17.md
+++ b/_posts/2009-09-03-owp17.md
@@ -21,18 +21,19 @@ Es ist ein bisschen was passiert obwohl Herr Pfefferle im Urlaub weilt. Und dahe
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
 <small>Länge: 1:00h (51,6 MB), <a href="http://openwebpodcast.de/mp3/openweb17.mp3">Download MP3</a></small>
-<h2>Shownotes</h2>
-<ul>
-	<li><a href="http://faz-community.faz.net/blogs/netzkonom/archive/2009/08/24/facebook-waehlt-web-de-und-gmx-als-partner-fuer-open-id.aspx">Facebook und Web.de sowie GMX verbünden sich</a></li>
-	<li><a href="http://personas.media.mit.edu/personasWeb.html">Personas</a> (Installation)</li>
-	<li><a href="http://www.readwriteweb.com/archives/facebook_snags_open_web_community_leader_recordon.php">Recordon geht zu Facebook</a></li>
-	<li><a href="http://meta.tagesschau.de/">meta.tagesschau.de</a></li>
-	<li><a href="http://dietmarkrause.wordpress.com/2009/08/20/egk-aktuell-erste-ausgabe-einer-neuen-infopost-der-gematik/">gematik Infopost </a></li>
-	<li><a href="http://www.hueniverse.com/hueniverse/2009/08/making-the-case-for-a-new-acct-uri-scheme-for-accounts.html">neues URI-Schema: acct</a></li>
-	<li><a href="http://www.hueniverse.com/hueniverse/2009/08/introducing-webfinger.html">WebFinger-Intro</a></li>
-	<li><a href="http://online.wsj.com/article/SB125132627009861985.html">Der soziale Steuerfahnder</a></li>
-	<li><a href="http://www.readwriteweb.com/archives/google_chrome_os_to_feature_single_sign-on.php">SSO für Google's Chrome OS?</a></li>
-	<li><a href="http://www.heise.de/newsticker/eBay-gibt-Mehrheit-an-Skype-ab--/meldung/144613">eBay gibt Mehrheit an Skype ab</a></li>
-	<li><a href="http://googleenterprise.blogspot.com/2009/09/waving-hello-to-google-apps.html">Google Wave öffnet sich für Google Apps</a></li>
-</ul>
-Die Video-Aufnahme des Podcasts gibt es ebenfalls, nämlich <a href="http://www.ustream.tv/recorded/2092161">hier</a>!
+
+## Shownotes
+
+*   [Facebook und Web.de sowie GMX verbünden sich](http://faz-community.faz.net/blogs/netzkonom/archive/2009/08/24/facebook-waehlt-web-de-und-gmx-als-partner-fuer-open-id.aspx)
+*   [Personas](http://personas.media.mit.edu/personasWeb.html) (Installation)
+*   [Recordon geht zu Facebook](http://www.readwriteweb.com/archives/facebook_snags_open_web_community_leader_recordon.php)
+*   [meta.tagesschau.de](http://meta.tagesschau.de/)
+*   [gematik Infopost](http://dietmarkrause.wordpress.com/2009/08/20/egk-aktuell-erste-ausgabe-einer-neuen-infopost-der-gematik/)
+*   [neues URI-Schema: acct](http://www.hueniverse.com/hueniverse/2009/08/making-the-case-for-a-new-acct-uri-scheme-for-accounts.html)
+*   [WebFinger-Intro](http://www.hueniverse.com/hueniverse/2009/08/introducing-webfinger.html)
+*   [Der soziale Steuerfahnder](http://online.wsj.com/article/SB125132627009861985.html)
+*   [SSO für Google's Chrome OS?](http://www.readwriteweb.com/archives/google_chrome_os_to_feature_single_sign-on.php)
+*   [eBay gibt Mehrheit an Skype ab](http://www.heise.de/newsticker/eBay-gibt-Mehrheit-an-Skype-ab--/meldung/144613)
+*   [Google Wave öffnet sich für Google Apps](http://googleenterprise.blogspot.com/2009/09/waving-hello-to-google-apps.html)
+
+Die Video-Aufnahme des Podcasts gibt es ebenfalls, nämlich [hier](http://www.ustream.tv/recorded/2092161)!
