--- a/_posts/2009-09-30-owp18.md
+++ b/_posts/2009-09-30-owp18.md
@@ -21,22 +21,23 @@ In dieser Folge geht es um die Frage, wie offen deutsche soziale Netzwerke sind.
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
 <small>Länge: 1:24h (73,5 MB), <a href="http://openwebpodcast.de/mp3/openweb18.mp3">Download MP3</a></small>
-<h2>Shownotes</h2>
-<ul>
-	<li><a href="http://www.readwriteweb.com/archives/myspaceid_comes_to_windows_live.php">MySpace und ActivityStreams mit Windows Live</a></li>
-	<li><a href="http://www.heise.de/newsticker/Google-verkuendet-Offensive-zur-Datenbefreiung--/meldung/145092">Google's Data Liberation -&gt; Die Datenbefreiung</a></li>
-	<li><a href="http://blog.plaxo.com/archives/2009/09/in_preparation.html">neue TOS bei Plaxo</a></li>
-	<li><a href="http://futureofwebstrategy.com/">Future of Web Strategy</a></li>
-	<li><a href="http://www.webstandards-magazin.de/">webstandards-magazin</a></li>
-	<li><a href="http://developer.yahoo.net/blog/archives/2009/09/openid_opengovernment.html">USA: Open Government mit Open ID (Artikel zu Yahoo)</a></li>
-	<li><a href="http://">netzpolitik zum Wahlausgang</a></li>
-</ul>
-<h3>Das Thema: Wie offen ist Deutschland?</h3>
-<ul>
-	<li><a href="http://www.community-summit.de/">Das Community &amp; Marketing 2.0 Summit</a></li>
-	<li><a href="http://mrtopf.de/blog/en/open-platforms-video/">einführende Folien zum Panel und dem Thema: Was sind offene, soziale Netzwerke?</a></li>
-	<li><a href="http://mrtopf.de/blog/en/how-open-is-open-social-anyway/">How open ist Open Social?</a></li>
-	<li><a href="http://wavecamp.mixxt.org/">WaveWednesday und WaveCamp bei mixxt</a></li>
-	<li><a href="http://wavecamp.soup.io/">Infos zum Wavecamp und zu Google Wave: wavecamp.soup.io</a></li>
-</ul>
+
+## Shownotes
+
+*   [MySpace und ActivityStreams mit Windows Live](http://www.readwriteweb.com/archives/myspaceid_comes_to_windows_live.php)
+*   [Google's Data Liberation -> Die Datenbefreiung](http://www.heise.de/newsticker/Google-verkuendet-Offensive-zur-Datenbefreiung--/meldung/145092)
+*   [neue TOS bei Plaxo](http://blog.plaxo.com/archives/2009/09/in_preparation.html)
+*   [Future of Web Strategy](http://futureofwebstrategy.com/)
+*   [webstandards-magazin](http://www.webstandards-magazin.de/)
+*   [USA: Open Government mit Open ID (Artikel zu Yahoo)](http://developer.yahoo.net/blog/archives/2009/09/openid_opengovernment.html)
+*   [netzpolitik zum Wahlausgang](http://)
+
+### Das Thema: Wie offen ist Deutschland?
+
+*   [Das Community & Marketing 2.0 Summit](http://www.community-summit.de/)
+*   [einführende Folien zum Panel und dem Thema: Was sind offene, soziale Netzwerke?](http://mrtopf.de/blog/en/open-platforms-video/)
+*   [How open ist Open Social?](http://mrtopf.de/blog/en/how-open-is-open-social-anyway/)
+*   [WaveWednesday und WaveCamp bei mixxt](http://wavecamp.mixxt.org/)
+*   [Infos zum Wavecamp und zu Google Wave: wavecamp.soup.io](http://wavecamp.soup.io/)
+
 Das Video des Panels soll auch demnächst veröffentlicht werden, teilte uns der Veranstalter mit.
