--- a/_posts/2009-10-25-owp21.md
+++ b/_posts/2009-10-25-owp21.md
@@ -12,8 +12,8 @@ enclosure:
     http://openwebpodcast.de/mp3/openweb21.mp3
     70865024
     audio/mpeg
-
 ---
+
 Der OpenWeb-Podcast wird ein Jahr alt, wer hätte das gedacht? Wir natürlich! Daher feiern wir uns und schauen zurück. Ausserdem gibt es ganz viele Hausaufgaben für euch!
 
 <audio controls>
@@ -22,13 +22,11 @@ Der OpenWeb-Podcast wird ein Jahr alt, wer hätte das gedacht? Wir natürlich! D
 </audio>
 <small>Länge: 1:16h (67,5 MB), <a href="http://openwebpodcast.de/mp3/openweb21.mp3">Download MP3</a></small>
 
-<h3>Links</h3>
+### Links
 
-<ul>
-	<li><a href="http://datawithoutborders.net">Data Without Border Podcast</a></li>
-	<li><a href="http://politfunk.de">Politfunk.de</a></li>
-	<li><a href="http://www.netzpolitik.org/2009/datenleck-bei-schuelervz/">Datenleck bei schülerVZ</a></li>
-	<li><a href="http://www.salmon-protocol.org/">Salmon Protocol</a></li>
-</ul>
+*   [Data Without Border Podcast](http://datawithoutborders.net)
+*   [Politfunk.de](http://politfunk.de)
+*   [Datenleck bei schülerVZ](http://www.netzpolitik.org/2009/datenleck-bei-schuelervz/)
+*   [Salmon Protocol](http://www.salmon-protocol.org/)
 
 Alle weiteren Links findet ihr ja in den alten Episoden! :-)
