--- a/_posts/2009-12-24-owp23.md
+++ b/_posts/2009-12-24-owp23.md
@@ -25,34 +25,29 @@ In der Weihnachts-Folge sprechen Matthias und ich (Christian) nochmal über die 
 <small>Länge: 1:35h (82.4 MB), <a href="http://openwebpodcast.de/mp3/openweb23.mp3">Download MP3</a></small>
 
 News:
-<ul>
-<li><a href="http://www.readwriteweb.com/archives/how_facebooks_new_privacy_changes_will_affect_you.php">Facebooks Privacy Changes</a></li>
-<li>Realtime bei <a href="http://netzwertig.com/2009/12/10/firehose-2010-echtzeit-fuer-alle-geschaeftsmodell-fuer-twitter/">Twitter</a> und <a href="http://www.techcrunch.com/2009/12/09/myspace-realtime-api-google-oneriot-groovy/">MySpace</a></li>
-<li><a href="http://netzwertig.com/2009/12/10/linkwertig-googleangst-bahn-de-irland-gowalla/">Googlephobie in Deutschland / ITGipfel / LeWeb</a>
-<ul>
-<li><a href="http://www.spiegel.de/netzwelt/netzpolitik/0,1518,665813,00.html">Artikel Spiegel</a></li>
-<li><a href="http://debatte.welt.de/weblogs/4881/boess+in+berlin/176772/google+ist+so+schlimm+wie+die+sowjetunion/">Artikel Welt online</a></li>
-</ul>
-</li>
-<li><a href="http://www.heise.de/newsticker/meldung/Google-kauft-Etherpad-und-schliesst-es-878120.html">Google kauft EtherPad</a></li>
-<li><a href="http://code.google.com/p/etherpad/">EtherPad wird Open Source</a></li>
-<li><a href="http://developer.myspace.com/Community/blogs/devteam/archive/2009/12/08/opening-the-flood-gates-and-unleashing-the-data.aspx">Neue APIs bei MySpace (Realtime Stream API)</a></li>
-<li><a href="http://www.whitehouse.gov/blog/2009/12/08/promoting-transparency-government">Open Government Directive</a> in den USA</li>
-<li><a href="http://openid.net/2009/11/11/community-board-member-election-announcement/">OpenID Elections</a></li>
-<li>Dataportability: <a href="http://blog.dataportability.org/2009/12/14/2010-dpp-steering-committeeboard-of-directors-announced/">Neues Board</a> und<a href="http://blog.dataportability.org/2009/12/09/our-comment-to-the-fcc-on-data-portability-and-its-relationship-to-broadband/"> Antworten auf Fragen der FCC</a></li>
-<li><a href="http://hueniverse.com/2009/12/whats-in-a-name-that-which-we-call-the-open-web-foundation/">Kritik an der OpenWebFoundation</a></li>
-<li><a href="http://developer.yahoo.net/blog/archives/2009/12/linking_your_facebook_account_on_yahoo.html?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+YDNBlog+%28Yahoo!+Developer+Network+Blog%29">Yahoo! implementiert Facebook-Connect</a></li>
-<li><a href="http://netzwertig.com/2009/12/07/studivz-ceo-markus-berger-de-leon-studivz-connect-kommt/">VZ-Connect</a></li>
-<li><a href="http://friendfeed.com/bret/37da8b99/oauth-wrap-support-in-friendfeed-for-feedback">FriendFeed wird erster OAuth-WRAP Provider</a></li>
-<li><a href="http://josephsmarr.com/2009/12/18/joseph-smarr-has-new-work-info%E2%80%A6/">Joseph Smarr wechselt zu Google</a></li>
-</ul>
+
+*   [Facebooks Privacy Changes](http://www.readwriteweb.com/archives/how_facebooks_new_privacy_changes_will_affect_you.php)
+*   Realtime bei [Twitter](http://netzwertig.com/2009/12/10/firehose-2010-echtzeit-fuer-alle-geschaeftsmodell-fuer-twitter/) und [MySpace](http://www.techcrunch.com/2009/12/09/myspace-realtime-api-google-oneriot-groovy/)
+*   [Googlephobie in Deutschland / ITGipfel / LeWeb](http://netzwertig.com/2009/12/10/linkwertig-googleangst-bahn-de-irland-gowalla/)
+    *   [Artikel Spiegel](http://www.spiegel.de/netzwelt/netzpolitik/0,1518,665813,00.html)
+    *   [Artikel Welt online](http://debatte.welt.de/weblogs/4881/boess+in+berlin/176772/google+ist+so+schlimm+wie+die+sowjetunion/)
+*   [Google kauft EtherPad](http://www.heise.de/newsticker/meldung/Google-kauft-Etherpad-und-schliesst-es-878120.html)
+*   [EtherPad wird Open Source](http://code.google.com/p/etherpad/)
+*   [Neue APIs bei MySpace (Realtime Stream API)](http://developer.myspace.com/Community/blogs/devteam/archive/2009/12/08/opening-the-flood-gates-and-unleashing-the-data.aspx)
+*   [Open Government Directive](http://www.whitehouse.gov/blog/2009/12/08/promoting-transparency-government) in den USA
+*   [OpenID Elections](http://openid.net/2009/11/11/community-board-member-election-announcement/)
+*   Dataportability: [Neues Board](http://blog.dataportability.org/2009/12/14/2010-dpp-steering-committeeboard-of-directors-announced/) und [Antworten auf Fragen der FCC](http://blog.dataportability.org/2009/12/09/our-comment-to-the-fcc-on-data-portability-and-its-relationship-to-broadband/)
+*   [Kritik an der OpenWebFoundation](http://hueniverse.com/2009/12/whats-in-a-name-that-which-we-call-the-open-web-foundation/)
+*   [Yahoo! implementiert Facebook-Connect](http://developer.yahoo.net/blog/archives/2009/12/linking_your_facebook_account_on_yahoo.html?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+YDNBlog+%28Yahoo!+Developer+Network+Blog%29)
+*   [VZ-Connect](http://netzwertig.com/2009/12/07/studivz-ceo-markus-berger-de-leon-studivz-connect-kommt/)
+*   [FriendFeed wird erster OAuth-WRAP Provider](http://friendfeed.com/bret/37da8b99/oauth-wrap-support-in-friendfeed-for-feedback)
+*   [Joseph Smarr wechselt zu Google](http://josephsmarr.com/2009/12/18/joseph-smarr-has-new-work-info%E2%80%A6/)
 
 Ausblick:
-<ul>
-<li>Kauft Google Twitter?</li>
-<li>Cloud Computing?</li>
-<li>Echtzeitweb?</li>
-<li>Real-Time Collaboration</li>
-<li>Wird Privatsphäre wieder IN sein?</li>
-<li>Was folgt aus IT-Gipfel?</li>
-</ul>
+
+*   Kauft Google Twitter?
+*   Cloud Computing?
+*   Echtzeitweb?
+*   Real-Time Collaboration
+*   Wird Privatsphäre wieder IN sein?
+*   Was folgt aus IT-Gipfel?
