--- a/_posts/2010-02-12-episode-24%e2%80%93foafssl.md
+++ b/_posts/2010-02-12-episode-24%e2%80%93foafssl.md
@@ -12,11 +12,11 @@ enclosure:
     http://openwebpodcast.de/mp3/openweb25.mp3
     49787008
     audio/mpeg
-
 ---
-Nach einer kleinen Abstinenz haben wir diesmal, wie versprochen, wieder ein Thema. Mario Volke (<a href="http://www.webholics.de/">Webholics</a>) hat uns das Thema <a href="http://esw.w3.org/topic/foaf+ssl"><strong>FoaF+SSL</strong></a> vorgeschlagen, vorbereitet und erklärt uns in der aktuellen Folge wie es funktioniert :)
 
-Vielen Dank auch an <a href="http://bblfish.net/">Henry Story</a>, dem geistigen Schöpfer von FoaF+SSL, der uns im <a href="http://live.openwebpodcast.de">IRC-Chat</a> mit Rat und Tat zur Seite stand.
+Nach einer kleinen Abstinenz haben wir diesmal, wie versprochen, wieder ein Thema. Mario Volke ([Webholics](http://www.webholics.de/)) hat uns das Thema [**FoaF+SSL**](http://esw.w3.org/topic/foaf+ssl) vorgeschlagen, vorbereitet und erklärt uns in der aktuellen Folge wie es funktioniert :)
+
+Vielen Dank auch an [Henry Story](http://bblfish.net/), dem geistigen Schöpfer von FoaF+SSL, der uns im [IRC-Chat](http://live.openwebpodcast.de) mit Rat und Tat zur Seite stand.
 
 <audio controls>
   <source src="http://openwebpodcast.de/mp3/openweb25.mp3" type="audio/mpeg">
@@ -24,103 +24,75 @@ Vielen Dank auch an <a href="http://bblfish.net/">Henry Story</a>, dem geistigen
 </audio>
 <small>Länge: 0:55h (47.5 MB), <a href="http://openwebpodcast.de/mp3/openweb25.mp3">Download MP3</a></small>
 
-<h2>News</h2>
-<ul>
-	<li><a href="http://www.google.com/buzz">Google Buzz</a></li>
-	<li><a href="http://code.google.com/intl/de-DE/apis/buzz/">Liste der offenen Standards</a></li>
-	<li><a href="http://www.salmon-protocol.org">Salmon-Protokoll</a></li>
-	<li><a href="http://code.google.com/p/pubsubhubbub/">PubSubHubbub</a></li>
-</ul>
-<h2>Shownotes</h2>
-<small>(Vielen Dank an <a href="http://www.webholics.de/">Mario</a>, der die Shownotes zusammengestellt hat)</small>
-<ul>
-	<li>dezentralisiertes Authentifizierungsprotokoll</li>
-	<li>One-Click-SignOn  (kein Username, kein Passwort)</li>
-	<li>WebID: Ein URI als ID für  deine Person (LinkedData)</li>
-	<li>100% Standardbasiert: REST, RDF,  LinkedData, SSL, X509</li>
-	<li>Alle Vorteile von Semantic Web  Technologies: strikte Semantik, Erweiterbarkeit (Namespaces), Reasoning  (OWL)</li>
-	<li>Web of Trust</li>
-</ul>
-<h3>Use Cases</h3>
-<ul>
-	<li>neben  einfachem Login</li>
-	<li>Web site personalization
-<ul>
-	<li>Profil  (FOAF) portabel und unter Kontrolle des Users, import mit nur einem  Klick (FOAF+SSL Login)</li>
-	<li>Einfaches Kommentieren (keine Eingabe von  persönlichen Daten mehr notwendig)</li>
-</ul>
-</li>
-	<li>Distributed Access  Control
-<ul>
-	<li>Zugang nur einer bestimmten foaf:Group gewähren</li>
-	<li>Rule  Based Access Control: Komplexe Policies möglich (bsp. nur Freunde von  bereits vorhandenen Usern erhalten Zugang, dies macht jeglichen  Invitation-Mechanismus obsolet)</li>
-	<li>Komplexität der Policies  lediglich durch Aussagekraft von RDF/OWL beschränkt</li>
-</ul>
-</li>
-	<li>Distributed  Social Networks
-<ul>
-	<li>auch hier komplexe Rollen und  Zugangsbeschränkungen möglich</li>
-</ul>
-</li>
-</ul>
-<h3>Details</h3>
-<ul>
-	<li>Was  braucht ein User um sich einzuloggen?
-<ul>
-	<li>X509-Zertifikat  (normalerweise direkt im Browser installiert)</li>
-	<li>FOAF-File  (öffentlich auf einem bel. Server, LinkedData)</li>
-</ul>
-</li>
-</ul>
-<ul>
-	<li>SSL  (RSA)
-<ul>
-	<li>Zertifikate häufig nur, um Server gegenüber  Client zu authentifizieren</li>
-	<li>jetzt: Browser besitzt self-signed  Zertifikat und authentifiziert sich gegenüber dem Server</li>
-	<li>X509-Zertifikat  enthält Link zur WebID (und damit zum FOAF-File) (im Feld "X509v3  Subject Alternative Name")</li>
-	<li>Der Public-Key des Zertifikats muss  mit dem im FOAF-Profil identisch sein</li>
-</ul>
-</li>
-	<li>Protokoll
-<ul>
-	<li>User  klickt auf Login-Button</li>
-	<li>Server eröffnet SSL Handshake und  verlangt Zertifikat vom User</li>
-	<li>Server holt sich das FOAF-Profil  des Users (überprüft den Public-Key auf Gleichheit)</li>
-	<li>nun sind  weitere beliebige Autorisierungsschritte anhand des FOAF-Profils möglich  (Web of Trust)</li>
-</ul>
-</li>
-	<li>Wie erstelle ich mir ein Zertifikat?
-<ul>
-	<li>z.B.  HTML5 &lt;keygen&gt;-Tag (Firefox, Opera, Safari, Chrome) (<a id="lao." title="http://test.foafssl.org/cert/" href="http://test.foafssl.org/cert/">http://test.foafssl.org/cert/</a>)</li>
-	<li>mit  ActiveX für IE</li>
-	<li>zur Not Serverseitig, allerdings Security Risk  weil der Server dann den Private Key kennt</li>
-</ul>
-</li>
-	<li>Gibt es  bereits Server-Implementierungen?
-<ul>
-	<li>Ja, einige, z.B. für PHP,  Python, Java, Apache Modul</li>
-</ul>
-</li>
-	<li>Browser-Support:
-<ul>
-	<li>Firefox  und Fennec</li>
-	<li>Opera</li>
-	<li>Safari, iPhone (mit bugs)</li>
-	<li>Chrome</li>
-	<li>Internet  Explorer &gt;= 6</li>
-</ul>
-</li>
-</ul>
-<h3>Links</h3>
-<ul>
-	<li>Hauptseite  Wiki: <a id="eo7k" title="http://esw.w3.org/topic/foaf+ssl" href="http://esw.w3.org/topic/foaf+ssl">http://esw.w3.org/topic/foaf+ssl</a></li>
-	<li>Mailing-List  <a id="yeai" title="http://lists.foaf-project.org/mailman/listinfo/foaf-protocols" href="http://lists.foaf-project.org/mailman/listinfo/foaf-protocols">http://lists.foaf-project.org/mailman/listinfo/foaf-protocols</a></li>
-	<li>Paper:  FOAF+SSL: RESTful Authentication for the Social Web - <a id="occp" title="http://dig.csail.mit.edu/2009/Papers/SPOT/foaf-ssl-spot2009.pdf" href="http://dig.csail.mit.edu/2009/Papers/SPOT/foaf-ssl-spot2009.pdf">http://dig.csail.mit.edu/2009/Papers/SPOT/foaf-ssl-spot2009.pdf</a></li>
-	<li>Vergleich  OpenID vs. FOAF+SSL <a id="g8pk" title="http://blogs.sun.com/bblfish/entry/what_does_foaf_ssl_give" href="http://blogs.sun.com/bblfish/entry/what_does_foaf_ssl_give">http://blogs.sun.com/bblfish/entry/what_does_foaf_ssl_give</a></li>
-	<li>Das  ganze funktioniert sogar mit dem iPhone: <a id="pq1." title="http://blogs.sun.com/bblfish/entry/one_click_global_sign_on" href="http://blogs.sun.com/bblfish/entry/one_click_global_sign_on">http://blogs.sun.com/bblfish/entry/one_click_global_sign_on</a></li>
-	<li>xfn ontology: <a href="http://vocab.sindice.com/xfn#">http://vocab.sindice.com/xfn#</a></li>
-	<li>vcard ontology:  <a href="http://www.w3.org/Submission/2010/SUBM-vcard-rdf-20100120/">http://www.w3.org/Submission/2010/SUBM-vcard-rdf-20100120/</a></li>
-	<li>foaf+ssl als Alternative zu OAuth: <a href="http://blogs.sun.com/bblfish/entry/sketch_of_a_restful_photo">http://blogs.sun.com/bblfish/entry/sketch_of_a_restful_photo</a></li>
-	<li>FOAF &amp; SSL: creating a global decentralised authentication protocol: <a href="http://blogs.sun.com/bblfish/entry/foaf_ssl_creating_a_global">http://blogs.sun.com/bblfish/entry/foaf_ssl_creating_a_global</a></li>
-	<li>foaf+ssl: adding security to open distributed social networks: <a href="http://blogs.sun.com/bblfish/entry/foaf_ssl_adding_security_to">http://blogs.sun.com/bblfish/entry/foaf_ssl_adding_security_to</a></li>
-</ul>
+## News
+
+*   [Google Buzz](http://www.google.com/buzz)
+*   [Liste der offenen Standards](http://code.google.com/intl/de-DE/apis/buzz/)
+*   [Salmon-Protokoll](http://www.salmon-protocol.org)
+*   [PubSubHubbub](http://code.google.com/p/pubsubhubbub/)
+
+## Shownotes
+
+<small>(Vielen Dank an [Mario](http://www.webholics.de/), der die Shownotes zusammengestellt hat)</small>
+
+*   dezentralisiertes Authentifizierungsprotokoll
+*   One-Click-SignOn (kein Username, kein Passwort)
+*   WebID: Ein URI als ID für deine Person (LinkedData)
+*   100% Standardbasiert: REST, RDF, LinkedData, SSL, X509
+*   Alle Vorteile von Semantic Web Technologies: strikte Semantik, Erweiterbarkeit (Namespaces), Reasoning (OWL)
+*   Web of Trust
+
+### Use Cases
+
+*   neben einfachem Login
+*   Web site personalization
+    *   Profil (FOAF) portabel und unter Kontrolle des Users, import mit nur einem Klick (FOAF+SSL Login)
+    *   Einfaches Kommentieren (keine Eingabe von persönlichen Daten mehr notwendig)
+*   Distributed Access Control
+    *   Zugang nur einer bestimmten foaf:Group gewähren
+    *   Rule Based Access Control: Komplexe Policies möglich (bsp. nur Freunde von bereits vorhandenen Usern erhalten Zugang, dies macht jeglichen Invitation-Mechanismus obsolet)
+    *   Komplexität der Policies lediglich durch Aussagekraft von RDF/OWL beschränkt
+*   Distributed Social Networks
+    *   auch hier komplexe Rollen und Zugangsbeschränkungen möglich
+
+### Details
+
+*   Was braucht ein User um sich einzuloggen?
+    *   X509-Zertifikat (normalerweise direkt im Browser installiert)
+    *   FOAF-File (öffentlich auf einem bel. Server, LinkedData)
+
+*   SSL (RSA)
+    *   Zertifikate häufig nur, um Server gegenüber Client zu authentifizieren
+    *   jetzt: Browser besitzt self-signed Zertifikat und authentifiziert sich gegenüber dem Server
+    *   X509-Zertifikat enthält Link zur WebID (und damit zum FOAF-File) (im Feld "X509v3 Subject Alternative Name")
+    *   Der Public-Key des Zertifikats muss mit dem im FOAF-Profil identisch sein
+*   Protokoll
+    *   User klickt auf Login-Button
+    *   Server eröffnet SSL Handshake und verlangt Zertifikat vom User
+    *   Server holt sich das FOAF-Profil des Users (überprüft den Public-Key auf Gleichheit)
+    *   nun sind weitere beliebige Autorisierungsschritte anhand des FOAF-Profils möglich (Web of Trust)
+*   Wie erstelle ich mir ein Zertifikat?
+    *   z.B. HTML5 <keygen>-Tag (Firefox, Opera, Safari, Chrome) ([http://test.foafssl.org/cert/](http://test.foafssl.org/cert/ "http://test.foafssl.org/cert/"))
+    *   mit ActiveX für IE
+    *   zur Not Serverseitig, allerdings Security Risk weil der Server dann den Private Key kennt
+*   Gibt es bereits Server-Implementierungen?
+    *   Ja, einige, z.B. für PHP, Python, Java, Apache Modul
+*   Browser-Support:
+    *   Firefox und Fennec
+    *   Opera
+    *   Safari, iPhone (mit bugs)
+    *   Chrome
+    *   Internet Explorer >= 6
+
+### Links
+
+*   Hauptseite Wiki: [http://esw.w3.org/topic/foaf+ssl](http://esw.w3.org/topic/foaf+ssl "http://esw.w3.org/topic/foaf+ssl")
+*   Mailing-List [http://lists.foaf-project.org/mailman/listinfo/foaf-protocols](http://lists.foaf-project.org/mailman/listinfo/foaf-protocols "http://lists.foaf-project.org/mailman/listinfo/foaf-protocols")
+*   Paper: FOAF+SSL: RESTful Authentication for the Social Web - [http://dig.csail.mit.edu/2009/Papers/SPOT/foaf-ssl-spot2009.pdf](http://dig.csail.mit.edu/2009/Papers/SPOT/foaf-ssl-spot2009.pdf "http://dig.csail.mit.edu/2009/Papers/SPOT/foaf-ssl-spot2009.pdf")
+*   Vergleich OpenID vs. FOAF+SSL [http://blogs.sun.com/bblfish/entry/what_does_foaf_ssl_give](http://blogs.sun.com/bblfish/entry/what_does_foaf_ssl_give "http://blogs.sun.com/bblfish/entry/what_does_foaf_ssl_give")
+*   Das ganze funktioniert sogar mit dem iPhone: [http://blogs.sun.com/bblfish/entry/one_click_global_sign_on](http://blogs.sun.com/bblfish/entry/one_click_global_sign_on "http://blogs.sun.com/bblfish/entry/one_click_global_sign_on")
+*   xfn ontology: [http://vocab.sindice.com/xfn#](http://vocab.sindice.com/xfn#)
+*   vcard ontology: [http://www.w3.org/Submission/2010/SUBM-vcard-rdf-20100120/](http://www.w3.org/Submission/2010/SUBM-vcard-rdf-20100120/)
+*   foaf+ssl als Alternative zu OAuth: [http://blogs.sun.com/bblfish/entry/sketch_of_a_restful_photo](http://blogs.sun.com/bblfish/entry/sketch_of_a_restful_photo)
+*   FOAF & SSL: creating a global decentralised authentication protocol: [http://blogs.sun.com/bblfish/entry/foaf_ssl_creating_a_global](http://blogs.sun.com/bblfish/entry/foaf_ssl_creating_a_global)
+*   foaf+ssl: adding security to open distributed social networks: [http://blogs.sun.com/bblfish/entry/foaf_ssl_adding_security_to](http://blogs.sun.com/bblfish/entry/foaf_ssl_adding_security_to)
