--- a/_posts/2010-04-21-owp27.md
+++ b/_posts/2010-04-21-owp27.md
@@ -12,8 +12,8 @@ enclosure:
     http://openwebpodcast.de/mp3/openweb27.mp3
     57059456
     audio/mpeg
-
 ---
+
 Es gab mal wieder einige News, die sich so angesammelt haben. Daher also eine reine News-Folge. Es geht um OAuth 2.0, um die Twitter-Konferenz Chirp und natürlich auch um Datenschutz und Facebook!
 
 Viel Spaß beim Hören:
@@ -23,40 +23,37 @@ Viel Spaß beim Hören:
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
 <small>Länge: 1h1m24s (57.1 MB), <a href="http://openwebpodcast.de/mp3/openweb27.mp3">Download MP3</a></small>
-<h3>News</h3>
-<ul>
-	<li>onesocialweb jetzt open source: <a href="http://onesocialweb.org/">http://onesocialweb.org/</a></li>
-	<li>European Identity Conference vom 4.-7. Mai 2010 (<a href="http://id-conf.de)">http://id-conf.de)</a>
-<ul>
-	<li>am 3. Mai UMA-Meeting 9 Uhr (<a href="http://www.id-conf.com/sessions/683)">http://www.id-conf.com/sessions/683)</a></li>
-	<li>am 6. Mai DataPortability-Panel (<a href="http://www.id-conf.com/sessions/742)">http://www.id-conf.com/sessions/742)</a></li>
-</ul>
-</li>
-	<li>RPX for Plone: <a href="http://comlounge.net/rpx/">http://comlounge.net/rpx/</a></li>
-	<li>.well-known uris ist rfc: <a href="http://hueniverse.com/2010/04/rfc-5785-defining-well-known-uris/">http://hueniverse.com/2010/04/rfc-5785-defining-well-known-uris/</a></li>
-	<li>Browser als Social-Agent: <a href="http://factoryjoe.com/blog/2010/04/01/the-social-agent-part-5-narrated-video/">http://factoryjoe.com/blog/2010/04/01/the-social-agent-part-5-narrated-video/</a></li>
-	<li>SelfHTML ist jetzt Wiki: Platz für Microformats/RDFa/...: <a href="http://wiki.selfhtml.org/wiki/Themen:Websemantics">http://wiki.selfhtml.org/wiki/Themen:Websemantics</a> (15.4.2011: Wiedervorlage)</li>
-	<li>in eigener Sache: Open Data-Interview: <a href="http://politfunk.de/live/pl023/">http://politfunk.de/live/pl023/</a></li>
-	<li><a href="http://blog.stackoverflow.com/2010/04/openid-one-year-later/">http://blog.stackoverflow.com/2010/04/openid-one-year-later/</a></li>
-	<li><a href="http://datawithoutborders.net">http://datawithoutborders.net</a> (Interview mit David Recordon zu OAuth 2.0)</li>
-</ul>
-Verpasst: <a href="http://wiki.openid.net/2010-OpenID-Technology-Summit-West">http://wiki.openid.net/2010-OpenID-Technology-Summit-West</a>
 
-<strong>Twitter News</strong>
-<ul>
-	<li>Promoted Tweets are not ads: <a href="http://mashable.com/2010/04/14/twitter-coo-promoted-tweets-are-not-ads/">http://mashable.com/2010/04/14/twitter-coo-promoted-tweets-are-not-ads/</a></li>
-	<li>@Anywhere jetzt live: <a href="http://mashable.com/2010/04/14/twitter-anywhere-launch/">http://mashable.com/2010/04/14/twitter-anywhere-launch/</a> und <a href="http://dev.twitter.com/anywhere">http://dev.twitter.com/anywhere</a></li>
-	<li>Twitter App Story: <a href="http://mashable.com/2010/04/14/twitter-app-investment/">http://mashable.com/2010/04/14/twitter-app-investment/</a></li>
-	<li>Ganz viele Antworten: <a href="http://mashable.com/2010/04/14/twitters-executives-answer-everybodys-questions-live/">http://mashable.com/2010/04/14/twitters-executives-answer-everybodys-questions-live/</a> (android app, Medienhosting usw.)</li>
-	<li>Twitter Dev Site: <a href="http://dev.twitter.com/">http://dev.twitter.com/</a></li>
-	<li>Keine Rate Limits mehr durch Push und Annotations (= SuperTweets?): <a href="http://techcrunch.com/2010/04/14/twitter-user-streams-annotations/">http://techcrunch.com/2010/04/14/twitter-user-streams-annotations/</a></li>
-	<li><a href="http://techcrunch.com/2010/04/14/twitter-has-105779710-registered-users-adding-300k-a-day/">http://techcrunch.com/2010/04/14/twitter-has-105779710-registered-users-adding-300k-a-day/</a></li>
-</ul>
-<strong>Facebook und Privacy</strong>
-<blockquote>First, it's important to underscore that this will be a test with a handful of carefully selected partners to provide express personalization on their sites. These partners will be pre-selected, reviewed, and bound by contracts with Facebook – much like other partners we have worked with in other contexts to deliver unique and innovative experiences. For example, we're working with Yahoo! to integrate Facebook across their properties, AOL to integrate our chat with AIM, and we first partnered with CNN.com to make their broadcast of the Presidential Inauguration more social with the launch of the Facebook live streamapplication.</blockquote>
-Quelle: <a href="http://blog.facebook.com/blog.php?post=379388037130">Facebook Blog</a>
-<ul>
-	<li>Link zu Aigner : <a href="http://www.bmelv.de/cln_173/SharedDocs/Standardartikel/Verbraucherschutz/Internet-Telekommunikation/Facebook-Datenschutz-Aigner.html">http://www.bmelv.de/cln_173/SharedDocs/Standardartikel/Verbraucherschutz/Internet-Telekommunikation/Facebook-Datenschutz-Aigner.html</a></li>
-	<li>Link zu FB Gruppe: <a href="http://www.facebook.com/group.php?v=info&amp;ref=search&amp;gid=112043458820354">http://www.facebook.com/group.php?v=info&amp;ref=search&amp;gid=112043458820354</a></li>
-	<li>CARTA.info: <a href="http://carta.info/25462/facebook-ein-zwischenruf/">http://carta.info/25462/facebook-ein-zwischenruf/</a></li>
-</ul>
+### News
+
+*   onesocialweb jetzt open source: [http://onesocialweb.org/](http://onesocialweb.org/)
+*   European Identity Conference vom 4.-7\. Mai 2010 ([http://id-conf.de)](http://id-conf.de))
+    *   am 3\. Mai UMA-Meeting 9 Uhr ([http://www.id-conf.com/sessions/683)](http://www.id-conf.com/sessions/683))
+    *   am 6\. Mai DataPortability-Panel ([http://www.id-conf.com/sessions/742)](http://www.id-conf.com/sessions/742))
+*   RPX for Plone: [http://comlounge.net/rpx/](http://comlounge.net/rpx/)
+*   .well-known uris ist rfc: [http://hueniverse.com/2010/04/rfc-5785-defining-well-known-uris/](http://hueniverse.com/2010/04/rfc-5785-defining-well-known-uris/)
+*   Browser als Social-Agent: [http://factoryjoe.com/blog/2010/04/01/the-social-agent-part-5-narrated-video/](http://factoryjoe.com/blog/2010/04/01/the-social-agent-part-5-narrated-video/)
+*   SelfHTML ist jetzt Wiki: Platz für Microformats/RDFa/...: [http://wiki.selfhtml.org/wiki/Themen:Websemantics](http://wiki.selfhtml.org/wiki/Themen:Websemantics) (15.4.2011: Wiedervorlage)
+*   in eigener Sache: Open Data-Interview: [http://politfunk.de/live/pl023/](http://politfunk.de/live/pl023/)
+*   [http://blog.stackoverflow.com/2010/04/openid-one-year-later/](http://blog.stackoverflow.com/2010/04/openid-one-year-later/)
+*   [http://datawithoutborders.net](http://datawithoutborders.net) (Interview mit David Recordon zu OAuth 2.0)
+
+Verpasst: [http://wiki.openid.net/2010-OpenID-Technology-Summit-West](http://wiki.openid.net/2010-OpenID-Technology-Summit-West) **Twitter News**
+
+*   Promoted Tweets are not ads: [http://mashable.com/2010/04/14/twitter-coo-promoted-tweets-are-not-ads/](http://mashable.com/2010/04/14/twitter-coo-promoted-tweets-are-not-ads/)
+*   @Anywhere jetzt live: [http://mashable.com/2010/04/14/twitter-anywhere-launch/](http://mashable.com/2010/04/14/twitter-anywhere-launch/) und [http://dev.twitter.com/anywhere](http://dev.twitter.com/anywhere)
+*   Twitter App Story: [http://mashable.com/2010/04/14/twitter-app-investment/](http://mashable.com/2010/04/14/twitter-app-investment/)
+*   Ganz viele Antworten: [http://mashable.com/2010/04/14/twitters-executives-answer-everybodys-questions-live/](http://mashable.com/2010/04/14/twitters-executives-answer-everybodys-questions-live/) (android app, Medienhosting usw.)
+*   Twitter Dev Site: [http://dev.twitter.com/](http://dev.twitter.com/)
+*   Keine Rate Limits mehr durch Push und Annotations (= SuperTweets?): [http://techcrunch.com/2010/04/14/twitter-user-streams-annotations/](http://techcrunch.com/2010/04/14/twitter-user-streams-annotations/)
+*   [http://techcrunch.com/2010/04/14/twitter-has-105779710-registered-users-adding-300k-a-day/](http://techcrunch.com/2010/04/14/twitter-has-105779710-registered-users-adding-300k-a-day/)
+
+**Facebook und Privacy**
+
+> First, it's important to underscore that this will be a test with a handful of carefully selected partners to provide express personalization on their sites. These partners will be pre-selected, reviewed, and bound by contracts with Facebook – much like other partners we have worked with in other contexts to deliver unique and innovative experiences. For example, we're working with Yahoo! to integrate Facebook across their properties, AOL to integrate our chat with AIM, and we first partnered with CNN.com to make their broadcast of the Presidential Inauguration more social with the launch of the Facebook live streamapplication.
+
+Quelle: [Facebook Blog](http://blog.facebook.com/blog.php?post=379388037130)
+
+*   Link zu Aigner : [http://www.bmelv.de/cln_173/SharedDocs/Standardartikel/Verbraucherschutz/Internet-Telekommunikation/Facebook-Datenschutz-Aigner.html](http://www.bmelv.de/cln_173/SharedDocs/Standardartikel/Verbraucherschutz/Internet-Telekommunikation/Facebook-Datenschutz-Aigner.html)
+*   Link zu FB Gruppe: [http://www.facebook.com/group.php?v=info&ref=search&gid=112043458820354](http://www.facebook.com/group.php?v=info&ref=search&gid=112043458820354)
+*   CARTA.info: [http://carta.info/25462/facebook-ein-zwischenruf/](http://carta.info/25462/facebook-ein-zwischenruf/)
