--- a/_posts/2010-05-23-owp29.md
+++ b/_posts/2010-05-23-owp29.md
@@ -12,8 +12,8 @@ enclosure:
     http://openwebpodcast.de/mp3/openweb29.mp3
     57905280
     audio/mpeg
-
 ---
+
 Es gibt mal wieder ein paar News:
 
 <audio controls>
@@ -24,51 +24,44 @@ Es gibt mal wieder ein paar News:
 
 Viel Spaß beim hören :)
 
-<h2>Termine</h2>
-<ul>
-	<li>IIW, May 17-19 <a href="http://iiw.idcommons.net/Iiw10">http://iiw.idcommons.net/Iiw10</a></li>
-	<li>OpenID Summit Europe, June 8th, London <a href="http://wiki.openid.net/2010-OpenID-Summit-EU">http://wiki.openid.net/2010-OpenID-Summit-EU</a></li>
-	<li>European e-Identity Management Conference, 9-10 June
-<a href="http://www.revolutionevents.plus.com/eema/index.htm">http://www.revolutionevents.plus.com/eema/index.htm</a></li>
-</ul>
-<h2>Ankündigungen</h2>
-<ul>
-	<li>Twitter <a href="http://comlounge.net/de/newsarticle/com.lounge-veroeffentlich-twitter-anywhere-for-plone">@Anywhere for Plone</a></li>
-	<li>UMA Prototype
-<ul>
-	<li>Site: <a href="http://host.clprojects.net/">http://host.clprojects.net/</a></li>
-	<li>Source: <a href="http://host.clprojects.net/">http://bitbucket.org/mrtopf/uma</a></li>
-	<li>UMA Protocol: <a href="http://kantarainitiative.org/confluence/display/uma/UMA+1.0+Core+Protocol">http://kantarainitiative.org/confluence/display/uma/UMA+1.0+Core+Protocol</a></li>
-	<li>Protocol I implemented: <a href="http://kantarainitiative.org/confluence/display/~christianscholz/The+Prototype+Protocol+Flow">http://kantarainitiative.org/confluence/display/~christianscholz/The+Prototype+Protocol+Flow</a></li>
-</ul>
-</li>
-</ul>
-<h2>XAuth und OExchange</h2>
-<ul>
-	<li><a href="http://blog.meebo.com/?p=2391">http://blog.meebo.com/?p=2391</a></li>
-	<li><a href="http://xauth.org/">http://xauth.org/</a></li>
-	<li><a href="http://www.oexchange.org/">http://www.oexchange.org/</a></li>
-	<li>XAuth + OExchange-Plugin für Wordpress
-<ul>
-	<li>OExchange: <a href="http://wordpress.org/extend/plugins/oexchange/">http://wordpress.org/extend/plugins/oexchange/</a></li>
-	<li>XAuth: <a href="http://wordpress.org/extend/plugins/xauth/">http://wordpress.org/extend/plugins/xauth/</a></li>
-</ul>
-</li>
-</ul>
-<h2>OpenID Connect</h2>
-<ul>
-	<li><a href="http://openidconnect.com/">http://openidconnect.com/</a></li>
-	<li> JRD: <a href="http://hueniverse.com/2010/05/jrd-the-other-resource-descriptor/">http://hueniverse.com/2010/05/jrd-the-other-resource-descriptor/</a></li>
-</ul>
-<h2>The European Identity Conference</h2>
+## Termine
+
+*   IIW, May 17-19 [http://iiw.idcommons.net/Iiw10](http://iiw.idcommons.net/Iiw10)
+*   OpenID Summit Europe, June 8th, London [http://wiki.openid.net/2010-OpenID-Summit-EU](http://wiki.openid.net/2010-OpenID-Summit-EU)
+*   European e-Identity Management Conference, 9-10 June [http://www.revolutionevents.plus.com/eema/index.htm](http://www.revolutionevents.plus.com/eema/index.htm)
+
+## Ankündigungen
+
+*   Twitter [@Anywhere for Plone](http://comlounge.net/de/newsarticle/com.lounge-veroeffentlich-twitter-anywhere-for-plone)
+*   UMA Prototype
+    *   Site: [http://host.clprojects.net/](http://host.clprojects.net/)
+    *   Source: [http://bitbucket.org/mrtopf/uma](http://host.clprojects.net/)
+    *   UMA Protocol: [http://kantarainitiative.org/confluence/display/uma/UMA+1.0+Core+Protocol](http://kantarainitiative.org/confluence/display/uma/UMA+1.0+Core+Protocol)
+    *   Protocol I implemented: [http://kantarainitiative.org/confluence/display/~christianscholz/The+Prototype+Protocol+Flow](http://kantarainitiative.org/confluence/display/~christianscholz/The+Prototype+Protocol+Flow)
+
+## XAuth und OExchange
+
+*   [http://blog.meebo.com/?p=2391](http://blog.meebo.com/?p=2391)
+*   [http://xauth.org/](http://xauth.org/)
+*   [http://www.oexchange.org/](http://www.oexchange.org/)
+*   XAuth + OExchange-Plugin für Wordpress
+    *   OExchange: [http://wordpress.org/extend/plugins/oexchange/](http://wordpress.org/extend/plugins/oexchange/)
+    *   XAuth: [http://wordpress.org/extend/plugins/xauth/](http://wordpress.org/extend/plugins/xauth/)
+
+## OpenID Connect
+
+*   [http://openidconnect.com/](http://openidconnect.com/)
+*   JRD: [http://hueniverse.com/2010/05/jrd-the-other-resource-descriptor/](http://hueniverse.com/2010/05/jrd-the-other-resource-descriptor/)
+
+## The European Identity Conference
+
 Zusammenfassung:
-<ul>
-	<li>UMA Workshop - geleitet von Eve Maler</li>
-	<li>Data Portability Panel mit Drummond Reed, Christian Scholz und Eve Maler</li>
-	<li>Post Privacy Panel mit Eve Maler, Andreas Reisen, Christian Scholz</li>
-	<li>National eID cards vs. OpenID/InfoCards - Zwei Kontinente, zwei Lösungen</li>
-	<li>Telekom-Projekt mit CardSelector im Telefon mit NFC und SIM-Cards.</li>
-	<li>Enterprise IT und die Komplexität</li>
-	<li>RBAC, ABAC, SAML, XACML und LDAP</li>
-	<li>Wieso gibt's noch LDAP?</li>
-</ul>
+
+*   UMA Workshop - geleitet von Eve Maler
+*   Data Portability Panel mit Drummond Reed, Christian Scholz und Eve Maler
+*   Post Privacy Panel mit Eve Maler, Andreas Reisen, Christian Scholz
+*   National eID cards vs. OpenID/InfoCards - Zwei Kontinente, zwei Lösungen
+*   Telekom-Projekt mit CardSelector im Telefon mit NFC und SIM-Cards.
+*   Enterprise IT und die Komplexität
+*   RBAC, ABAC, SAML, XACML und LDAP
+*   Wieso gibt's noch LDAP?
