--- a/_posts/2010-06-05-owp30.md
+++ b/_posts/2010-06-05-owp30.md
@@ -14,9 +14,9 @@ enclosure:
     http://openwebpodcast.de/mp3/openweb30.mp3
     50835584
     audio/mpeg
-
 ---
-Eine kleine Einführung in OAuth 2. Wem OAuth bisher kein Begriff ist, der kann sich ja nochmal <a href="http://blog.openwebpodcast.de/35/episode-3-oauth/">Episode 3</a> anhören.
+
+Eine kleine Einführung in OAuth 2\. Wem OAuth bisher kein Begriff ist, der kann sich ja nochmal [Episode 3](http://blog.openwebpodcast.de/35/episode-3-oauth/) anhören.
 
 <audio controls>
   <source src="http://openwebpodcast.de/mp3/openweb30.mp3" type="audio/mpeg">
@@ -26,44 +26,45 @@ Eine kleine Einführung in OAuth 2. Wem OAuth bisher kein Begriff ist, der kann 
 
 Viel Spaß beim hören :)
 
-OAuth 2 Draft: <a href="http://www.ietf.org/id/draft-ietf-oauth-v2-05.txt">http://www.ietf.org/id/draft-ietf-oauth-v2-05.txt</a>
-Einführung: <a href="http://hueniverse.com/2010/05/introducing-oauth-2-0/">http://hueniverse.com/2010/05/introducing-oauth-2-0/</a>
-<h2>Warum OAuth 2.0?</h2>
-<ul>
-	<li> Probleme mit mobilen Applikationen</li>
-	<li>Probleme mit Javascript-Applikationen</li>
-	<li>Problem mit Architektur, da nur peer-to-peer</li>
-	<li>Signature Base String zu kompliziert</li>
-</ul>
-<h2>Die Geschichte</h2>
-<h3>OAuth WRAP</h3>
-<a href="http://wiki.oauth.net/OAuth-WRAP">OAuth WRAP</a> - ein Versuch, es neu machen, zunächst unter anderem Namen, dann unter OAuth
-fliesst in OAuth 2.0 ein
-<h3>OAuth 2.0</h3>
-<ul>
-	<li>Nicht kompatibel zu OAuth 1.0</li>
-	<li>Es wird nur optional signiert (dann aber nur per SSL)</li>
-	<li>Nicht nur 1 Flow sondern mehrere. Gemeinsamkeit: Es kommt ein Access-Token hinten raus</li>
-	<li>Es gibt ein Refresh Token</li>
-	<li>Der Aufruf von "protected Resources" ist immer gleich.</li>
-	<li>erweiterte Architektur</li>
-</ul>
-<h2>Terminologie</h2>
-<ul>
-	<li>resource server</li>
-	<li>protected resource</li>
-	<li>client</li>
-	<li>resource owner</li>
-	<li>authorization server</li>
-	<li>access token</li>
-	<li>bearer token</li>
-</ul>
-<h2>Die Flows</h2>
-<ul>
-	<li>User-Agent Flow</li>
-	<li>Web Server Flow</li>
-	<li>Device Flow</li>
-	<li>Username and Password Flow</li>
-	<li>Client Credential Flow</li>
-	<li>Assertion Flow</li>
-</ul>
+OAuth 2 Draft: [http://www.ietf.org/id/draft-ietf-oauth-v2-05.txt](http://www.ietf.org/id/draft-ietf-oauth-v2-05.txt) Einführung: [http://hueniverse.com/2010/05/introducing-oauth-2-0/](http://hueniverse.com/2010/05/introducing-oauth-2-0/)
+
+## Warum OAuth 2.0?
+
+*   Probleme mit mobilen Applikationen
+*   Probleme mit Javascript-Applikationen
+*   Problem mit Architektur, da nur peer-to-peer
+*   Signature Base String zu kompliziert
+
+## Die Geschichte
+
+### OAuth WRAP
+
+[OAuth WRAP](http://wiki.oauth.net/OAuth-WRAP) - ein Versuch, es neu machen, zunächst unter anderem Namen, dann unter OAuth fliesst in OAuth 2.0 ein
+
+### OAuth 2.0
+
+*   Nicht kompatibel zu OAuth 1.0
+*   Es wird nur optional signiert (dann aber nur per SSL)
+*   Nicht nur 1 Flow sondern mehrere. Gemeinsamkeit: Es kommt ein Access-Token hinten raus
+*   Es gibt ein Refresh Token
+*   Der Aufruf von "protected Resources" ist immer gleich.
+*   erweiterte Architektur
+
+## Terminologie
+
+*   resource server
+*   protected resource
+*   client
+*   resource owner
+*   authorization server
+*   access token
+*   bearer token
+
+## Die Flows
+
+*   User-Agent Flow
+*   Web Server Flow
+*   Device Flow
+*   Username and Password Flow
+*   Client Credential Flow
+*   Assertion Flow
