--- a/_posts/2010-12-03-owp31.md
+++ b/_posts/2010-12-03-owp31.md
@@ -13,7 +13,7 @@ enclosure:
   - audio/mpeg
 ---
 
-Nun ist der Sommer rum und wir können endlich wieder podcasten! Und was liegt näher, als einmal <a href="http://joindiaspora.com">Diaspora</a> anzuschauen?
+Nun ist der Sommer rum und wir können endlich wieder podcasten! Und was liegt näher, als einmal [Diaspora](http://joindiaspora.com) anzuschauen?
 
 Richtig: Nichts! Also los geht's!
 
@@ -24,53 +24,31 @@ Richtig: Nichts! Also los geht's!
 
 <small>Länge: 43m, <a href="http://openwebpodcast.de/mp3/openweb31.mp3">Download MP3</a></small>
 
-<div class="fblink">
-    <h4><a href="http://christianogait.posterous.com/google-vs-facebook">Google vs. Facebook - Christian Ogait</a></h4>
-    <div class="fbdesc">
-        http://christianogait.posterous.com/google-vs-facebook
-    </div>
-</div>
 
-<div class="fblink">
-    <h4><a href="http://blog.flattr.net/2010/11/subscribe-to-your-favorite-things/">Subscribe to your favorite things! at Flattr Blog</a></h4>
-    <div class="fbdesc">
-        Flattr kann jetzt Abos!
-    </div>
-</div>
+#### [Google vs. Facebook - Christian Ogait](http://christianogait.posterous.com/google-vs-facebook)
 
+http://christianogait.posterous.com/google-vs-facebook
 
-<div class="fblink">
-    <h4><a href="http://mashable.com/2010/11/25/apache-wave-google/">Google Wave Comes Back From the Dead in an Apache Proposal</a></h4>
-    <div class="fbdesc">
-        Google Wave wird Apache Wave?
-    </div>
-</div>
+#### [Subscribe to your favorite things! at Flattr Blog](http://blog.flattr.net/2010/11/subscribe-to-your-favorite-things/)
 
+Flattr kann jetzt Abos!
 
-<div class="fblink">
-    <h4><a href="http://techcrunch.com/2010/11/22/facebook-blocks-lamebook/">Facebook Tries To Silence Lamebook: Removes Its Page, Blocks Links And Likes</a></h4>
-    <div class="fbdesc">
-        Facebook und Lamebook
-    </div>
-</div>
+#### [Google Wave Comes Back From the Dead in an Apache Proposal](http://mashable.com/2010/11/25/apache-wave-google/)
 
-<div class="fblink">
-    <h4><a href="http://www.joindiaspora.com/">DIASPORA*</a></h4>
-    <div class="fbdesc">
-        Diaspora - die Alpha geht los.
-    </div>
-</div>
+Google Wave wird Apache Wave?
 
-<div class="fblink">
-    <h4><a href="http://netzwertig.com/2010/11/26/produktlaunch-was-macht-diaspora-besser-als-es-schafft-nachfrage/">Produktlaunch: “Was macht diaspora besser als…?”  Es schafft Nachfrage!</a></h4>
-    <div class="fbdesc">
-        Ist Nachfrage das, was Diaspora braucht?
-    </div>
-</div>
+#### [Facebook Tries To Silence Lamebook: Removes Its Page, Blocks Links And Likes](http://techcrunch.com/2010/11/22/facebook-blocks-lamebook/)
 
-<div class="fblink">
-    <h4><a href="http://openidconnect.com/">OpenID Connect</a></h4>
-    <div class="fbdesc">
-        http://openidconnect.com/
-    </div>
-</div>
+Facebook und Lamebook
+
+#### [DIASPORA*](http://www.joindiaspora.com/)
+
+Diaspora - die Alpha geht los.
+
+#### [Produktlaunch: “Was macht diaspora besser als…?” Es schafft Nachfrage!](http://netzwertig.com/2010/11/26/produktlaunch-was-macht-diaspora-besser-als-es-schafft-nachfrage/)
+
+Ist Nachfrage das, was Diaspora braucht?
+
+#### [OpenID Connect](http://openidconnect.com/)
+
+http://openidconnect.com/
